# TermCalc

./: CMakeLists.txt  LICENSE  readme.md
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp  versioning.h.in
src/components/: AppTitle.hpp  ButtonPanel.hpp  ResultLabel.hpp  Seperator.hpp
